syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "GroupCompetitionBattleProto";

package groupCompetition;

//请求消息的类型
enum GCBattleReqType{
	BATTLE_START = 1;//请求战斗开始
	UPLOAD_HP_INFO = 2;//上传生命信息
	BATTLE_END = 3;//请求结束战斗
	PUSH_HP_INFO = 4;//血量信息推送消息
	MATCH_GROUP_SOCRE = 5;//请求获取匹配双方的帮派积分
	PUSH_BATTLE_RESULT = 6;//推送战斗结果的消息
	PUSH_MEMBER_SCORE = 7;//推送成员战斗结束之后增加的积分情况
}

//战斗结果
enum GCBattleResult{
	NONE = 0;//主要是用于某些需要返回值的情况
	WIN = 1;//胜
	LOSE = 2;//负
	DRAW = 3;//平
}

//积分增加信息
message GCMemberScore{
	required int32 index = 1;//对应的索引
	required int32 personalScore = 2;//个人积分增加
	required int32 groupScore = 3;//帮派积分增加
}

//对垒的帮派信息
message GCMatchGroupInfo{
	required string myGroupName = 1;//自己的帮派名字
	required string enemyGroupName = 2;//敌人的帮派名字
	required string myGroupIcon = 3;//自己的帮派图标
	required string enemyGroupIcon = 4;//敌人的帮派图标
	required int32 myGroupScore = 5;//自己的帮派积分
	required int32 enemyGroupScore = 6;//敌人的帮派积分
}

//请求战斗开始的响应消息
message GCBattleStartRspMsg{
	required string mineArmyInfo = 1;//自己的ArmyInfo
	required string enemyArmyInfo = 2;//敌人的ArmyInfo
	required GCMatchGroupInfo matchGroupInfo = 3;//对垒的帮派的信息
}

//上传血量信息的请求消息
message GCUploadHpInfoReqMsg{
	required float mineHpPercent = 1;//自己的血量变化
	required float enemyHpPercent = 2;//敌人的血量变化
}

//战斗结果上传的请求消息
message GCBattleEndReqMsg{
	required GCBattleResult result = 1;//战斗结果
}

//推送的血量变化的信息
message GCPushHpInfoRspMsg{
	required int32 index = 1;//更新血量的对战的Index
	required float mineHpPercent = 2;//自己的血量变化
	required float enemyHpPercent = 3;//敌人的血量变化
}

//获取对垒双方的帮派积分变化的响应信息
message GCMatchGroupScoreRspMsg{
	required int32 myGroupScore = 1;//自己帮派的积分
	required int32 enemyGroupScore = 2;//敌人帮派的积分
}

//推送战斗结果的响应消息
message GCPushBattleResultRspMsg{
	required int32 index = 1;//更新战斗结果的Index
	required GCBattleResult result = 2;//战斗结果
}

//成员增加积分的推送消息
message GCPushMemberScoreRspMsg{
	repeated GCMemberScore memberScore = 1;//成员增加的积分
	required GCBattleResult result = 2;//整个队伍的结果
}

//通用请求消息
message GCBattleCommonReqMsg{
	required GCBattleReqType reqType = 1;//请求的类型
	optional GCUploadHpInfoReqMsg uploadHpInfoReq = 2;//上传血量信息
	optional GCBattleEndReqMsg battleEndReq = 3;//战斗结果上传的信息
}

//通用的响应消息
message GCBattleCommonRspMsg{
	required GCBattleReqType reqType = 1;//请求的类型
	required bool isSuccess = 2;//是否成功
	optional string tipMsg = 3;//提示消息
	optional GCBattleStartRspMsg battleStartRsp = 4;//战斗开始的响应消息
	optional GCPushHpInfoRspMsg pushHpInfoRsp = 5;//推送的血量变化信息
	optional GCMatchGroupScoreRspMsg matchGroupScoreRsp = 6;//获取对垒双方的帮派积分变化信息
	optional GCPushBattleResultRspMsg pushBattleResultRsp = 7;//推送战斗结果的响应消息
	optional GCPushMemberScoreRspMsg pushMemeberScoreRsp = 8;//推送战斗成员的积分情况
}